--- a/index.html
+++ b/index.html
@@ -4,72 +4,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesheet.css">
-    <title>Student Name</title>
+    <link rel="stylesheet" href="CSS/stylesheet.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1 class="main-header">Student Name</h1>
         <nav>
             <ul class="main-nav">
-                <li>Home</li>
-                <li>Portfilio</li>
-                <li>Contact</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#portfolio">Portfilio</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
     
 
     <div>
-        <img src="images/responsive-layout-profile.png" alt="picture of me">
-        <p>Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
+        <img class="me" src="images/responsive-layout-profile.png" alt="picture of me">
+        <p class="about">Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
     </div>
 
-    <section>
-        <h2>PORTFOLIO</h2>
-        <div>
-            <img class="" src="/images/portfolio-1.png">
+    <section class="holder">
+        <h2 id="portfolio">PORTFOLIO</h2>
+        <div class="first element">
+            <img class="pic" src="images/portfolio-1.png">
             <h3>Marketing Page</h3>
             <p>This Project shows the front page of a marketing page website ment for a specific buisness I'm interested in.</p>
         </div>
-        <div>
-            <img src="images/portfolio-2.png">
+        <div class="second element">
+            <img class="pic" src="images/portfolio-2.png">
             <h3>Search Page</h3>
             <p>This project searches through a specific database to find information that the user is trying to look up.</p>
         </div>
-        <div>
-            <img src="/images/portfolio-3.png">
+        <div class="third element">
+            <img class="pic" src="images/portfolio-3.png">
             <h3>Travel App</h3>
             <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
         </div>
-        <div>
-            <img src="images/portfolio-4.png">
+        <div class="fourth element">
+            <img class="pic" src="images/portfolio-4.png">
             <h3>Map of Favorite Spots</h3>
             <p>This Project Uses Mapping apis to plot points for my faborite spots in the city for a do-it-yourself walking tour.</p>
         </div>
-        <div>
-            <img src="images/portfolio-5.png">
+        <div class ="fifth element">
+            <img class="pic" src="images/portfolio-5.png">
             <h3>Photo Gallery</h3>
             <p>this project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
         </div>
-        <div>
-            <img src="images/portfolio-6.png">
+        <div class="sixth element">
+            <img class="pic" src="images/portfolio-6.png">
             <h3>Calculator</h3>
             <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
         </div>
     </section>
 
-    <div class="contact">
+    <div id="contact">
         <h3>CONTACT</h3>
         <p>If you're interested in chatting or want more information about what i've been working on, I'd love to hear from you!</p>
-        <p>Phone  +1(111)555-1234</p>
-        <p>Email  email@yoursite.com</p>
+        <p class="phone">Phone  +1(111)555-1234</p>
+        <p class="email">Email  email@yoursite.com</p>
     </div>
-
+    <div class="divider"> </div>
     <footer>
-        <h2>Student Name</h2>
-        <a href="">BACK TO TOP</a>
-
+        <h3>Student Name</h2>
+        <a class="btt" href="#">BACK TO TOP</a>
     </footer>
 
 </body>
