--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="CSS/stylesheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -17,12 +17,13 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#portfolio">Portfilio</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="#skills">Skills</a></li>
             </ul>
         </nav>
     </header>
     
 
-    <div>
+    <div class="flex">
         <img class="me" src="images/responsive-layout-profile.png" alt="picture of me">
         <p class="about">Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
     </div>
@@ -61,16 +62,43 @@
         </div>
     </section>
 
+    <section class="holder">
+        <h2 id="skills">SKILLS</h2>
+        <div class="first element">
+            <img class="pic" src="images/css.png">
+            <h3>Master of CSS</h3>
+            <p>Thanks to Treehouse's Techdegree I am now a master of CSS.</p>
+        </div>
+        <div class="second element">
+            <img class="js" src="images/clipart1474351.png">
+            <h3>Master of Javascript</h3>
+            <p>Thanks to Treehouse's Techdegree I am now a master of Javescript.</p>
+        </div>
+        <div class="third element">
+            <img class="pic" src="images/1369258.png">
+            <h3>Master of HTML</h3>
+            <p>Thanks to Treehouse's Techdegree I am now a master of HTML.</p>
+        </div>
+    </section>
+
     <div id="contact">
         <h3>CONTACT</h3>
-        <p>If you're interested in chatting or want more information about what i've been working on, I'd love to hear from you!</p>
-        <p class="phone">Phone  +1(111)555-1234</p>
-        <p class="email">Email  email@yoursite.com</p>
+        <p class="talk">If you're interested in chatting or want more information about what i've been working on, I'd love to hear from you!</p>
+        <p class="phone">Phone <strong>+1(111)555-1234</strong></p>
+        <p class="email">Email <strong>email@yoursite.com</strong></p>
     </div>
     <div class="divider"> </div>
     <footer>
-        <h3>Student Name</h2>
+        <h3 class="student">Student Name</h2>
         <a class="btt" href="#">BACK TO TOP</a>
+        <nav>
+            <ul class="bottom-nav">
+                <li><a href="#">Home</a></li>
+                <li><a href="#portfolio">Portfilio</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#skills">Skills</a></li>
+            </ul>
+        </nav>
     </footer>
 
 </body>
