--- a/index.html
+++ b/index.html
@@ -1,105 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/stylesheet.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
-</head>
-<body>
-    <header>
-        <h1 class="main-header">Student Name</h1>
-        <nav>
-            <ul class="main-nav">
-                <li><a href="#">Home</a></li>
-                <li><a href="#portfolio">Portfilio</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#skills">Skills</a></li>
-            </ul>
-        </nav>
-    </header>
-    
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="CSS/stylesheet.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
+        <title>Student Name's Portfilio</title>
+    </head>
+    <body>
+        <header>
+            <h1 class="main-header">Student Name</h1>
+            <nav>
+                <ul class="main-nav">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#portfolio">Portfilio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                </ul>
+            </nav>
+        </header>
+        
 
-    <div class="flex">
-        <img class="me" src="images/responsive-layout-profile.png" alt="picture of me">
-        <p class="about">Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
-    </div>
+        <div class="flex">
+            <img class="me" src="images/responsive-layout-profile.png" alt="picture of me">
+            <p class="about">Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
+        </div>
 
-    <section class="holder">
-        <h2 id="portfolio">PORTFOLIO</h2>
-        <div class="first element">
-            <img class="pic" src="images/portfolio-1.png">
-            <h3>Marketing Page</h3>
-            <p>This Project shows the front page of a marketing page website ment for a specific buisness I'm interested in.</p>
-        </div>
-        <div class="second element">
-            <img class="pic" src="images/portfolio-2.png">
-            <h3>Search Page</h3>
-            <p>This project searches through a specific database to find information that the user is trying to look up.</p>
-        </div>
-        <div class="third element">
-            <img class="pic" src="images/portfolio-3.png">
-            <h3>Travel App</h3>
-            <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-        </div>
-        <div class="fourth element">
-            <img class="pic" src="images/portfolio-4.png">
-            <h3>Map of Favorite Spots</h3>
-            <p>This Project Uses Mapping apis to plot points for my faborite spots in the city for a do-it-yourself walking tour.</p>
-        </div>
-        <div class ="fifth element">
-            <img class="pic" src="images/portfolio-5.png">
-            <h3>Photo Gallery</h3>
-            <p>this project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
-        </div>
-        <div class="sixth element">
-            <img class="pic" src="images/portfolio-6.png">
-            <h3>Calculator</h3>
-            <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
-        </div>
-    </section>
+        <section class="holder">
+            <h2 id="portfolio">PORTFOLIO</h2>
+            <div class="element">
+                <img class="pic" src="images/portfolio-1.png" alt="picture of my marketing webpage">
+                <h3>Marketing Page</h3>
+                <p>This Project shows the front page of a marketing page website ment for a specific buisness I'm interested in.</p>
+            </div>
+            <div class="element">
+                <img class="pic" src="images/portfolio-2.png" alt="picture of my search webpage">
+                <h3>Search Page</h3>
+                <p>This project searches through a specific database to find information that the user is trying to look up.</p>
+            </div>
+            <div class="element">
+                <img class="pic" src="images/portfolio-3.png" alt="picture of my Travel App webpage">
+                <h3>Travel App</h3>
+                <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+            </div>
+            <div class="element">
+                <img class="pic" src="images/portfolio-4.png" alt="picture of my Favorite Spots webpage">
+                <h3>Map of Favorite Spots</h3>
+                <p>This Project Uses Mapping apis to plot points for my faborite spots in the city for a do-it-yourself walking tour.</p>
+            </div>
+            <div class ="element">
+                <img class="pic" src="images/portfolio-5.png" alt="picture of my photogallery webpage">
+                <h3>Photo Gallery</h3>
+                <p>this project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+            </div>
+            <div class="element">
+                <img class="pic" src="images/portfolio-6.png" alt="Picture of my calculator webpage">
+                <h3>Calculator</h3>
+                <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+            </div>
+        </section>
 
-    <section class="holder">
-        <h2 id="skills">SKILLS</h2>
-        <div class="first element">
-            <img class="pic" src="images/css.png">
-            <h3>Master of CSS</h3>
-            <p>Thanks to Treehouse's Techdegree I am now a master of CSS.</p>
-        </div>
-        <div class="second element">
-            <img class="js" src="images/clipart1474351.png">
-            <h3>Master of Javascript</h3>
-            <p>Thanks to Treehouse's Techdegree I am now a master of Javescript.</p>
-        </div>
-        <div class="third element">
-            <img class="pic" src="images/1369258.png">
-            <h3>Master of HTML</h3>
-            <p>Thanks to Treehouse's Techdegree I am now a master of HTML.</p>
-        </div>
-    </section>
+        <section class="holder">
+            <h2 id="skills">SKILLS</h2>
+            <div class="first element">
+                <img class="pic" src="images/css.png" alt="CSS Logo">
+                <h3>Master of CSS</h3>
+                <p>Thanks to Treehouse's Techdegree I am now a master of CSS.</p>
+            </div>
+            <div class="second element">
+                <img class="js" src="images/clipart1474351.png" alt="Javascript Logo">
+                <h3>Master of Javascript</h3>
+                <p>Thanks to Treehouse's Techdegree I am now a master of Javescript.</p>
+            </div>
+            <div class="third element">
+                <img class="pic" src="images/1369258.png" alt="HTML Logo">
+                <h3>Master of HTML</h3>
+                <p>Thanks to Treehouse's Techdegree I am now a master of HTML.</p>
+            </div>
+        </section>
 
-    <div id="contact">
-        <h3>CONTACT</h3>
-        <p class="talk">If you're interested in chatting or want more information about what i've been working on, I'd love to hear from you!</p>
-        <p class="phone">Phone <strong>+1(111)555-1234</strong></p>
-        <p class="email">Email <strong>email@yoursite.com</strong></p>
-    </div>
-    <div class="divider"> </div>
-    <footer>
-        <h3 class="student">Student Name</h2>
-        <a class="btt" href="#">BACK TO TOP</a>
-        <nav>
-            <ul class="bottom-nav">
-                <li><a href="#">Home</a></li>
-                <li><a href="#portfolio">Portfilio</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#skills">Skills</a></li>
-            </ul>
-        </nav>
-    </footer>
+        <div id="contact">
+            <h3>CONTACT</h3>
+            <p class="talk">If you're interested in chatting or want more information about what i've been working on, I'd love to hear from you!</p>
+            <p class="phone">Phone <strong>+1(111)555-1234</strong></p>
+            <p class="email">Email <strong>email@yoursite.com</strong></p>
+        </div>
+        <div class="divider"> </div>
+        <footer>
+            <h2> class="student">Student Name</h2>
+            <a class="btt" href="#">BACK TO TOP</a>
+            <nav>
+                <ul class="bottom-nav">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#portfolio">Portfilio</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                </ul>
+            </nav>
+        </footer>
 
-</body>
+    </body>
 </html>
