--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
         <div class="divider"> </div>
         <footer>
-            <h2> class="student">Student Name</h2>
+            <h2 class="student">Student Name</h2>
             <a class="btt" href="#">BACK TO TOP</a>
             <nav>
                 <ul class="bottom-nav">
