--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
-        <title>Student Name's Portfilio</title>
+        <title>Student Name's Portfolio</title>
     </head>
     <body>
         <header>
@@ -16,9 +16,9 @@
             <nav>
                 <ul class="main-nav">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#portfolio">Portfilio</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#skills">Skills</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -96,8 +96,8 @@
                 <ul class="bottom-nav">
                     <li><a href="#">Home</a></li>
                     <li><a href="#portfolio">Portfilio</a></li>
-                    <li><a href="#contact">Contact</a></li>
                     <li><a href="#skills">Skills</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </footer>
